Opened 13 years ago
Closed 7 years ago
#8373 closed bug (fixed)
Syslog should be skipped by Installer (easy)
Reported by: | jonas.kirilla | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Installer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The syslog is copied over by the Installer, from source to target.
I would expect a clean install to have an empty syslog.
Change History (7)
follow-up: 2 comment:1 by , 13 years ago
comment:2 by , 13 years ago
Replying to Disreali:
What is the source you are using?
In this case, a CD.
Copying over the syslog of a CD boot or a USB boot over to e.g. HD, as part of the installation may very well be expected - as copying is what Installer does - but I think it should be skipped so that the first syslog entry of a clean install always is about the very first boot of that installation, rather than for it to be appended to the previous syslog from the boot of the install media.
Granted, most factors are shared, and the syslog content is roughly the same.
comment:3 by , 7 years ago
Summary: | Syslog should be skipped by Installer → Syslog should be skipped by Installer (easy) |
---|
follow-up: 5 comment:4 by , 7 years ago
The EntryFilter object in the WorkerThread class appears to have a set of paths that are ignored during the copy operation (see https://git.haiku-os.org/haiku/tree/src/apps/installer/WorkerThread.cpp#n87)
I believe that this bug can be resolved by simply adding the syslog file's path to the set of ignored paths. If that's correct, I'll work on the patch.
comment:5 by , 7 years ago
Replying to kimb18h:
I believe that this bug can be resolved by simply adding the syslog file's path to the set of ignored paths. If that's correct, I'll work on the patch.
Agreed. "system/var/log/syslog" should cover syslog and syslog.old.
What is the source you are using?
IIRC, Installer copies everything from source to the target.
IOW, Once you boot an install, a syslog is created and Installer will be copy it, as well as everything else on the source install partition, to the target. That is the expected behavior.