src/apps/installer/WorkerThread.cpp
@@ -99,6 +99,7 @@ public:
 			fIgnorePaths.insert("haiku-boot-floppy.image");
 			fIgnorePaths.insert("system/var/swap");
 			fIgnorePaths.insert("system/var/shared_memory");
+			fIgnorePaths.insert("system/var/log/syslog");
 
 			fPackageFSRootPaths.insert("system");
 			fPackageFSRootPaths.insert("home/config");
